[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ui/menus/waiting-room/WaitingRoom.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/themes/fonts/large.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/themes/fonts/small.tres" type="DynamicFont" id=4]

[node name="WaitingRoom" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -289.132, -54.2432 )
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 109.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 578.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 3 )
text = "SchoolBoyBattle"

[node name="Label" type="Label" parent="."]
margin_top = 129.0
margin_right = 1280.0
margin_bottom = 199.0
text = "Partie locale"
autowrap = true

[node name="GridContainer" type="HBoxContainer" parent="."]
margin_top = 219.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer"]
margin_right = 852.0
margin_bottom = 501.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.09

[node name="Label" type="Label" parent="GridContainer/VBoxContainer"]
margin_right = 852.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "Joueurs connectés"

[node name="ItemList" type="ItemList" parent="GridContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 852.0
margin_bottom = 501.0
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="GridContainer"]
margin_left = 872.0
margin_top = 301.0
margin_right = 1280.0
margin_bottom = 501.0
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="ButtonStart" type="Button" parent="GridContainer/VBoxContainer2"]
margin_right = 408.0
margin_bottom = 90.0
size_flags_horizontal = 3
text = "DÉMARRER"

[node name="ButtonBack" type="Button" parent="GridContainer/VBoxContainer2"]
margin_top = 110.0
margin_right = 408.0
margin_bottom = 200.0
text = "Retour"

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 203.0
margin_bottom = 184.0

[connection signal="pressed" from="GridContainer/VBoxContainer2/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="GridContainer/VBoxContainer2/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="confirmed" from="ErrorDialog" to="." method="_on_ErrorDialog_confirmed"]
[connection signal="popup_hide" from="ErrorDialog" to="." method="_on_ErrorDialog_popup_hide"]
